--- a/index.html
+++ b/index.html
@@ -1,23 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <script src="vendor/angular/angular.js"></script>
     <script src="vendor/momentjs/min/moment.min.js"></script>
     <script src="js/app.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="UI/css/screen.css">
   </head>
   <body ng-app="app">
-    <div ng-controller="CalendarCtrl">
-      <div>
-        <a ng-click="reset()">Today</a>
-        <a ng-click="prev()">&laquo; Prev</a>
-        <a ng-click="next()">Next &raquo;</a>
-      </div>
-      <div class="calendar-grid">
-          <div class="day" ng-repeat="day in period">
-            {{ day.nb }} - {{ day.shortName }} - {{ day.month }} - {{ day.year }}
+    <div class="container">
+      <header role="banner">
+         btn resources
+      </header>
+
+      <section role="main">
+        <div ng-controller="CalendarCtrl">
+          <nav>
+            <section class="float-left">
+              {{ year }}
+              <a class="btn" ng-click="setMonth(month.nb)" ng-class='{active: month.current}' ng-repeat="month in months">{{ month.shortName }}</a>
+            </section>
+            <section class="float-right">
+              <a class="btn" ng-click="prev()">&laquo; Prev</a>
+              <a class="btn" ng-click="reset()">Today</a>
+              <a class="btn" ng-click="next()">Next &raquo;</a>
+            </section>
+          </nav>
+
+          <aside>
+            <div class="users">
+              <div class="user" ng-repeat="user in users">
+                <div class="user-data"><img src="UI/images/avatar.png" /> {{ user.name }}</div>
+              </div>
+            </div>
+          </aside>
+
+          <div class="calendar-viewport">
+            <div class="calendar-grid" style="width: {{ daysContainerWidth }}px">
+                <div class="days">
+                  <div class="day" ng-repeat="day in period" ng-class='{active: day.current}'>
+                    {{ day.nb }}
+                  </div>
+                </div>
+                <div class="users-grid" ng-repeat="user in users">
+                  <div class="day" ng-repeat="day in period" ng-class='{weekend: day.weekend}'>
+
+                  </div>
+                </div>
+            </div>
           </div>
-      </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
