--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/ngDialog/js/ngDialog.min.js"></script>
     <script src="vendor/momentjs/min/moment.min.js"></script>
     <script src="js/app.js"></script>
+    <link rel="stylesheet" href="vendor/ngDialog/css/ngDialog.min.css">
+    <link rel="stylesheet" href="vendor/ngDialog/css/ngDialog-theme-default.min.css">
     <link rel="stylesheet" href="UI/css/screen.css">
   </head>
   <body ng-app="app">
@@ -12,6 +15,18 @@
       <header role="banner">
          btn resources
       </header>
+
+      <script type="text/ng-template" id="newTask">
+          <h1>Add new task</h1>
+          <form ng-submit="create()" ng-controller="CalendarCtrl">
+            name: <input ng-model="task.name" /> <br/>
+            user: <input ng-model="task.user_id" /> <br/>
+            start at: <input ng-model="task.block_start_date" /> <br/>
+            end at: <input ng-model="task.block_end_date" /> <br/>
+            <input type="submit" id="submit" value="Submit" />
+          </form>
+      </script>
+
 
       <section role="main">
         <div ng-controller="CalendarCtrl">
@@ -41,8 +56,8 @@
                   <div class="day" ng-repeat="day in period" ng-class='{active: day.current}'>
                     <label>{{ day.nb }}</label>
                     <div class="users-grid" ng-repeat="user in users">
-                      <div class="day" ng-class='{weekend: day.weekend}'>
-                        <div class="task" style="width: 108px; height: 40px" ng-show="{{$index == 1 && $parent.$index == 3}}">urlop (8h)</div>
+                      <div class="day" ng-class='{weekend: day.weekend}' ng-click="new(day.ofYear, user.id, year, day.date)">
+                        <div class="task" style="width: {{task.block_len * cellSize}}px" ng-repeat="task in user.tasks | filter:{ block_start_doy: day.ofYear }" ng-click="edit(task.id)" stop-event>{{ task.name }}</div>
                       </div>
                     </div>
                   </div>
