--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
 
           <div class="calendar-viewport">
             <div class="calendar-grid" style="width: {{ daysContainerWidth }}px">
-              <div class="month" ng-repeat="month in period">
+              <!-- each month -->
+              <div class="months" ng-repeat="month in period">
+                <div class="month">{{ month.name }}</div>
+                <!-- has few days -->
                 <div class="days">
-                  <div class="day" ng-repeat="day in month" ng-class='{active: day.current}'>
+                  <div class="day" ng-repeat="day in month.days" ng-class='{active: day.current}'>
                     <label>{{ day.nb }}</label>
+                    <!-- for each user in this day -->
                     <div class="users-grid" ng-repeat="(id, user) in users">
-
                       <div class="day" ng-class='{weekend: day.weekend}'>
-
+                        <!-- start to show tasks for current day -->
                         <div class="task card-label-{{ task.color }}" style="width: {{task.block_len * cellSize}}px; top: {{ task.index * 30 }}px" ng-repeat="task in user.tasks | filter:{ block_start_doy: day.ofYear }" ng-click="edit(task.id)" stop-event>{{ task.name }}</div>
-
                       </div>
                     </div>
                   </div>
