--- a/index.html
+++ b/index.html
@@ -1,68 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script src="https://api.trello.com/1/client.js?key=a4a1fbde221d3ab65ef9235422177a7a"></script>
-    <script src="vendor/angular/angular.js"></script>
-    <script src="vendor/ngDialog/js/ngDialog.min.js"></script>
-    <script src="vendor/momentjs/min/moment.min.js"></script>
-    <script src="js/app.js"></script>
-    <link rel="stylesheet" href="vendor/ngDialog/css/ngDialog.min.css">
-    <link rel="stylesheet" href="vendor/ngDialog/css/ngDialog-theme-default.min.css">
-    <link rel="stylesheet" href="UI/css/screen.css">
-  </head>
-  <body ng-app="app">
-    <div class="container">
-      <header role="banner">
-         btn resources
-      </header>
+    <head>
+        <meta charset="utf-8">
+        <title>My App</title>
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+        <!-- your app's css -->
+        <link href="UI/css/screen.css" rel="stylesheet">
+    </head>
 
-      <section role="main">
-        <div ng-controller="CalendarCtrl">
-          <nav>
-            <section class="float-left">
-              {{ year }}
-              <a class="btn" ng-click="setMonth(month.nb)" ng-class='{active: month.current}' ng-repeat="month in months">{{ month.shortName }}</a>
+    <body ng-cloak ng-app="app">
+        <div class="container">
+            <header role="banner">
+                btn resources
+                <a href="#/timeline">Timeline</a>
+                <a href="#/activity">Activity</a>
+            </header>
+
+            <section role="main">
+                <ng-view></ng-view>
             </section>
-            <section class="float-right">
-              <a class="btn" ng-click="prev()">&laquo; Prev</a>
-              <a class="btn" ng-click="reset()">Today</a>
-              <a class="btn" ng-click="next()">Next &raquo;</a>
-            </section>
-          </nav>
 
-          <aside>
-            <div class="users">
-              <div class="user" ng-repeat="user in users">
-                <div class="user-data"><img src="UI/images/avatar.png" /> {{ user.name }}</div>
-              </div>
-            </div>
-          </aside>
-
-          <div class="calendar-viewport">
-            <div class="calendar-grid" style="width: {{ daysContainerWidth }}px">
-              <!-- each month -->
-              <div class="months" ng-repeat="month in period">
-                <div class="month">{{ month.name }}</div>
-                <!-- has few days -->
-                <div class="days">
-                  <div class="day" ng-repeat="day in month.days" ng-class='{active: day.current}'>
-                    <label>{{ day.nb }}</label>
-                    <!-- for each user in this day -->
-                    <div class="users-grid" ng-repeat="(id, user) in users">
-                      <div class="day" ng-class='{weekend: day.weekend}'>
-                        <!-- start to show tasks for current day -->
-                        <div class="task card-label-{{ task.color }}" style="width: {{task.block_len * cellSize}}px; top: {{ task.index * 30 }}px" ng-repeat="task in user.tasks | filter:{ block_start_doy: day.ofYear, }:true | filter:{ year: day.year }:true" ng-click="edit(task.id)" stop-event>{{ task.name }}</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </section>
-    </div>
-  </body>
+
+        <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+        <script src="https://api.trello.com/1/client.js?key=a4a1fbde221d3ab65ef9235422177a7a"></script>
+
+        <script src="vendor/angular/angular.js"></script>
+        <script src="vendor/angular-route/angular-route.js"></script>
+        <script src="vendor/momentjs/min/moment.min.js"></script>
+
+        <!-- your app's script -->
+        <script src="app/app.js"></script>
+        <script src="app/services/calendar.js"></script>
+        <script src="app/services/users.js"></script>
+        <script src="app/timeline/timeline.js"></script>
+        <script src="app/activity/activity.js"></script>
+    </body>
 </html>
