infakt in progress

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="#/timeline" class="active">Timeline</a></li>
+                        <li><a href="#/invoices">Invoices</a></li>
                         <li><a href="#/activity">Activity</a></li>
                     </ul>
                 </nav>
@@ -40,5 +41,6 @@
         <script src="app/services/users.js"></script>
         <script src="app/timeline/timeline.js"></script>
         <script src="app/activity/activity.js"></script>
+        <script src="app/invoices/invoices.js"></script>
     </body>
 </html>
